--- a/etc/config.ini
+++ b/etc/config.ini
@@ -7,6 +7,12 @@
 public  = /var/dim/public
 private = /var/dim/private
 
+[redis]
+# host     = 'localhost'
+# port     = 6379
+# password = '1234'
+# enable   = on
+
 [station]
 host = 127.0.0.1
 port = 9394
