upgrade for dimples 1.4.0

--- a/etc/config.ini
+++ b/etc/config.ini
@@ -3,9 +3,10 @@
 #
 
 [database]
-# root  = /var/dim
-public  = /var/dim/public
-private = /var/dim/private
+# root    = /var/dim
+public    = /var/dim/public
+protected = /var/dim/protected
+private   = /var/dim/private
 
 [redis]
 # host     = 'localhost'
@@ -14,12 +15,12 @@ private = /var/dim/private
 # enable   = on
 
 [station]
-host = 127.0.0.1
+host = 134.185.88.109
 port = 9394
 
 [ans]
 assistant =
-usher =
+usher     =
 
 [group]
 supervisors =
