config. get_supervisors()

--- a/etc/config.ini
+++ b/etc/config.ini
@@ -1,3 +1,4 @@
+# -*- coding: utf-8 -*-
 #
 #   Configuration for Bots
 #
@@ -22,5 +23,5 @@ port = 9394
 assistant =
 usher     =
 
-[group]
-supervisors =
+[admin]
+supervisors = 0x952718A18C6b21abb593D84203282fe1c21773D6, 0x9527983A58D48C2CA9016D84043D557981C2AC5a
